Extend composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,18 @@
 {
-    "name": "components/requirejs-text",
-    "description": "RequireJS text plugin"
+    "name": "ni-jmatthiesen/requirejs-text",
+    "description": "RequireJS text plugin",
+    "type": "component",
+    "homepage": "http://requirejs.org/",
+    "require": {
+        "robloach/component-installer": "*",
+        "ni-jmatthiesen/requirejs": "*"
+    },
+    "extra": {
+        "component": {
+            "name": "requirejs-text",
+            "files": [
+                "text.js"
+            ]
+        }
+    }
 }
